# ReinforcementLearningAlgorithms

./: README.md  noughtsAndCrosses.ipynb  oneDMaze.ipynb  pyproject.toml  twoDMaze.ipynb
agents/: ActorCriticAgent.py  DoubleQLearningAgent.py  ExpectedSarsaAgent.py  HumanAgent.py  MonteCarloAgent.py  PolicyIterationAgent.py  QLearningAgent.py  RandomAgent.py  ReinforceAgent.py  SarsaAgent.py  StateValueTemporalDifferenceZeroAgent.py  TemporalDifferenceNStepsToExpectedSarsaAgent.py  ValueIterationAgent.py
agents/helpers/: BellmansEquations.py  DynamicsFunctions.py  PolicyFunctions.py  SoftmaxFunctions.py
agents/tables/: QTable.py  StateValueTable.py
environments/: AbstractEnvironment.py  NoughtsAndCrossesEnvironment.py  NoughtsAndCrossesTwoPlayerEnvironment.py  NoughtsAndCrossesVersusAgentEnvironment.py  OneDMazeEnvironment.py  Runner.py  TwoDMazeEnvironment.py
naughtsAndCrosses/: naughtsAndCrosses.ipynb
naughtsAndCrosses/agents/: human_agent.py  random_agent.py
naughtsAndCrosses/environment/: board.py  player_type.py  round.py
naughtsAndCrosses/game/: game_printer.py  game_round.py
naughtsAndCrossesOld/agents/: abstract_agent.py
naughtsAndCrossesOld/game/: game_outcome.py  game_reward.py  game_series.py
oneDMaze/: AbstractAgent.py  AbstractEnvironment.py  OneDMazeDynamics.py  OneDMazeEnvironment.py  Runner.py  oneDMaze.ipynb
twoDMaze/: AbstractAgent.py  DynamicsFunctions.py  Runner.py  TwoDMazeEnvironment.py  twoDMaze.ipynb
