[tool.poetry]
name = "reinforcement_learning_practice"
version = "1.0.0"
description = ""
authors = ["KevReece <kevinjamesreece@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
